updated analysis with fast and slow games

--- a/monsters_dataframe.ipynb
+++ b/monsters_dataframe.ipynb
@@ -4846,8 +4846,8 @@
       "Dep. Variable:                 winner   R-squared (uncentered):                   0.963\n",
       "Model:                            OLS   Adj. R-squared (uncentered):              0.962\n",
       "Method:                 Least Squares   F-statistic:                              3545.\n",
-      "Date:                Mon, 14 Dec 2020   Prob (F-statistic):                        0.00\n",
-      "Time:                        23:27:15   Log-Likelihood:                         -1576.5\n",
+      "Date:                Tue, 15 Dec 2020   Prob (F-statistic):                        0.00\n",
+      "Time:                        19:09:45   Log-Likelihood:                         -1576.5\n",
       "No. Observations:                6537   AIC:                                      3247.\n",
       "Df Residuals:                    6490   BIC:                                      3566.\n",
       "Df Model:                          47                                                  \n",
@@ -4959,7 +4959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4970,7 +4970,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4980,7 +4980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4992,7 +4992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -5001,7 +5001,7 @@
        "0.8776309348996574"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5013,7 +5013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -5048,7 +5048,7 @@
        " (0.005075265091257962, 'firstblood')]"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5061,7 +5061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5071,7 +5071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -5094,7 +5094,7 @@
        "LogisticRegression(random_state=1)"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5106,7 +5106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5116,7 +5116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -5125,7 +5125,7 @@
        "0.8558492413117964"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5137,7 +5137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -5165,7 +5165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5174,7 +5174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -5191,7 +5191,7 @@
        "Name: gameduration, dtype: float64"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5202,7 +5202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5212,17 +5212,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
     "df_fastgames = df[df['gameduration'] < 1963]\n",
-    "df_slowgames = df[df['gameduration'] > 1963]"
+    "df_slowgames = df[df['gameduration'] > 1963]\n",
+    "df_fastgames = df_fastgames.drop(['t1_towerkills','t1_inhibitorkills','t1_baronkills','t1_dragonkills','t1_riftheraldkills'],axis=1)\n",
+    "df_fastgames = df_fastgames.drop(['t2_towerkills','t2_inhibitorkills','t2_baronkills','t2_dragonkills','t2_riftheraldkills'],axis=1)\n",
+    "df_slowgames = df_slowgames.drop(['t1_towerkills','t1_inhibitorkills','t1_baronkills','t1_dragonkills','t1_riftheraldkills'],axis=1)\n",
+    "df_slowgames = df_slowgames.drop(['t2_towerkills','t2_inhibitorkills','t2_baronkills','t2_dragonkills','t2_riftheraldkills'],axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5233,7 +5237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5243,7 +5247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5255,7 +5259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 171,
    "metadata": {
     "scrolled": true
    },
@@ -5263,10 +5267,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9926542605288933"
+       "0.9745347698334965"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5278,72 +5282,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0.17672593725018818, 't1_towerkills'),\n",
-       " (0.14936374734740798, 't2_towerkills'),\n",
-       " (0.139796343042171, 't2_inhibitorkills'),\n",
-       " (0.13084012873211542, 't1_inhibitorkills'),\n",
-       " (0.11029568205786644, 'firstbaron'),\n",
-       " (0.10188968939236392, 't1_baronkills'),\n",
-       " (0.06336736792453757, 'firstinhibitor'),\n",
-       " (0.03028177838466829, 't2_dragonkills'),\n",
-       " (0.024450132203638314, 't1_dragonkills'),\n",
-       " (0.017591128326319812, 't2_baronkills'),\n",
-       " (0.017443194582711086, 't1_riftheraldkills'),\n",
-       " (0.007577906814604811, 'firstdragon'),\n",
-       " (0.0034373734641848326, 'firstblood'),\n",
-       " (0.003063295061776758, 'firsttower'),\n",
-       " (0.00146048703667213, 't2_champ5id'),\n",
-       " (0.0011367009621068571, 't2_champ3id'),\n",
-       " (0.001088136587861234, 'gameduration'),\n",
-       " (0.0010175484430712878, 'firstriftherald'),\n",
-       " (0.0009884300533873095, 't1_champ4id'),\n",
-       " (0.0009585717484911973, 't1_champ1id'),\n",
-       " (0.0008795439225817345, 't1_champ2id'),\n",
-       " (0.0008669125768432058, 't2_champ4id'),\n",
-       " (0.0008413965088737818, 't1_ban4'),\n",
-       " (0.0008196624678580866, 't2_champ1id'),\n",
-       " (0.0007194702268440658, 't1_ban1'),\n",
-       " (0.0007142815128580024, 't2_ban1'),\n",
-       " (0.0006593812940839022, 't2_ban2'),\n",
-       " (0.0006332836573264298, 't2_champ5_sum1'),\n",
-       " (0.0005973590104582544, 't1_ban2'),\n",
-       " (0.0005788718588144519, 't2_champ1_sum2'),\n",
-       " (0.0005515551710394166, 't2_ban3'),\n",
-       " (0.0005478362063510826, 't1_ban3'),\n",
-       " (0.0005298715172808755, 't2_ban4'),\n",
-       " (0.0004866571668450167, 't1_champ2_sum2'),\n",
-       " (0.0004708674345417945, 't2_champ2id'),\n",
-       " (0.00046375442905401696, 't1_ban5'),\n",
-       " (0.00045807812976987475, 't2_champ1_sum1'),\n",
-       " (0.00045486038386338175, 't1_champ3_sum2'),\n",
-       " (0.0004546196306515879, 't1_champ5id'),\n",
-       " (0.00045005569017906845, 't1_champ3id'),\n",
-       " (0.00043116546851336543, 't1_champ5_sum2'),\n",
-       " (0.00040651941600947664, 't2_ban5'),\n",
-       " (0.0004000845413438918, 't2_champ3_sum1'),\n",
-       " (0.0003693570229151276, 't2_champ4_sum2'),\n",
-       " (0.000355155037872669, 't1_champ4_sum1'),\n",
-       " (0.00034650104890343646, 't1_champ3_sum1'),\n",
-       " (0.0003427561189393904, 't1_champ2_sum1'),\n",
-       " (0.0003098960040617413, 't2_champ5_sum2'),\n",
-       " (0.00030916137360817095, 't2_champ2_sum2'),\n",
-       " (0.0003011732434308918, 't1_champ1_sum1'),\n",
-       " (0.00027004459424518614, 't2_champ3_sum2'),\n",
-       " (0.00026501126829085476, 't1_champ5_sum1'),\n",
-       " (0.00024446554805277013, 't1_champ1_sum2'),\n",
-       " (0.0002336974069881455, 't2_champ4_sum1'),\n",
-       " (0.0001978904825796164, 't2_champ2_sum1'),\n",
-       " (0.00015195532815249992, 't1_champ4_sum2'),\n",
-       " (0.00011326788383031583, 't2_riftheraldkills')]"
+       "[(0.38705856737786615, 'firstinhibitor'),\n",
+       " (0.3540369785737195, 'firstbaron'),\n",
+       " (0.04188173393720223, 'firsttower'),\n",
+       " (0.02753634878708042, 'firstriftherald'),\n",
+       " (0.0220382729240922, 'firstdragon'),\n",
+       " (0.01417966183149764, 'firstblood'),\n",
+       " (0.008101376531287511, 'gameduration'),\n",
+       " (0.006066506658802486, 't1_champ3id'),\n",
+       " (0.006058455940351669, 't2_champ5id'),\n",
+       " (0.0060554144932300465, 't1_ban5'),\n",
+       " (0.005860029498567229, 't1_champ1id'),\n",
+       " (0.005623369414803972, 't2_ban2'),\n",
+       " (0.005172749716336933, 't1_ban2'),\n",
+       " (0.005165165976391499, 't2_ban5'),\n",
+       " (0.00509518871884136, 't2_champ3id'),\n",
+       " (0.005074048172000487, 't1_champ4id'),\n",
+       " (0.004981533895011531, 't2_champ4id'),\n",
+       " (0.004839961420735723, 't1_ban1'),\n",
+       " (0.00477358013128504, 't1_champ5id'),\n",
+       " (0.0045271688010491, 't1_champ2id'),\n",
+       " (0.00446802609933078, 't1_ban3'),\n",
+       " (0.004399084795002691, 't2_champ1id'),\n",
+       " (0.004367044713821429, 't2_ban3'),\n",
+       " (0.004355710471011267, 't2_champ2id'),\n",
+       " (0.00431825796333714, 't2_ban4'),\n",
+       " (0.00426521941272296, 't1_ban4'),\n",
+       " (0.0034236648416095545, 't2_ban1'),\n",
+       " (0.002848615611280328, 't2_champ2_sum2'),\n",
+       " (0.0028327837581654087, 't1_champ3_sum2'),\n",
+       " (0.002824956651808586, 't2_champ5_sum2'),\n",
+       " (0.002606263856971728, 't2_champ1_sum1'),\n",
+       " (0.002515339254200483, 't2_champ4_sum1'),\n",
+       " (0.002476804223698776, 't1_champ5_sum2'),\n",
+       " (0.002459119642569536, 't2_champ1_sum2'),\n",
+       " (0.002427359595547664, 't1_champ4_sum2'),\n",
+       " (0.0024206875286452087, 't2_champ2_sum1'),\n",
+       " (0.0023962866126609208, 't1_champ3_sum1'),\n",
+       " (0.002341820870633322, 't1_champ2_sum2'),\n",
+       " (0.002327428470291042, 't1_champ2_sum1'),\n",
+       " (0.002294406574512151, 't2_champ5_sum1'),\n",
+       " (0.0022643994478134164, 't2_champ3_sum1'),\n",
+       " (0.002221403456925165, 't1_champ1_sum2'),\n",
+       " (0.0020604508819062014, 't2_champ4_sum2'),\n",
+       " (0.0019264056887827474, 't1_champ5_sum1'),\n",
+       " (0.0019081374441147967, 't2_champ3_sum2'),\n",
+       " (0.0016011907864048104, 't1_champ4_sum1'),\n",
+       " (0.0015230185460789645, 't1_champ1_sum1')]"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 172,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5356,7 +5350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5367,7 +5361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5377,7 +5371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5389,16 +5383,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9446349828515433"
+       "0.7638412542871141"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 176,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5410,72 +5404,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(0.21368807756696465, 't2_towerkills'),\n",
-       " (0.1650275763418935, 't1_towerkills'),\n",
-       " (0.12803749637270276, 't2_inhibitorkills'),\n",
-       " (0.10228282443972353, 't1_inhibitorkills'),\n",
-       " (0.054493188454595824, 't1_baronkills'),\n",
-       " (0.03680001723060036, 'firstinhibitor'),\n",
-       " (0.0265193544296259, 'firstbaron'),\n",
-       " (0.01985165188565606, 't2_baronkills'),\n",
-       " (0.016906477566268226, 't1_dragonkills'),\n",
-       " (0.015928077919232963, 't2_dragonkills'),\n",
-       " (0.014571027597821418, 'gameduration'),\n",
-       " (0.007501058601070764, 't2_ban3'),\n",
-       " (0.0072930363890866415, 't2_champ1id'),\n",
-       " (0.0071916014643539404, 't1_champ5id'),\n",
-       " (0.0071629992049758, 't1_champ3id'),\n",
-       " (0.007139397669112393, 't1_champ2id'),\n",
-       " (0.007119933905689975, 't2_champ2id'),\n",
-       " (0.007014839316175949, 't1_champ4id'),\n",
-       " (0.006638768691403655, 't2_ban2'),\n",
-       " (0.006380915704311096, 't2_champ4id'),\n",
-       " (0.006349714890799838, 't2_ban1'),\n",
-       " (0.0063314557434548425, 't2_ban5'),\n",
-       " (0.006324503140275773, 't1_ban2'),\n",
-       " (0.006306162710400537, 't1_ban5'),\n",
-       " (0.006192354140231051, 't1_ban1'),\n",
-       " (0.006178577032903658, 't1_champ1id'),\n",
-       " (0.006163253692680173, 't2_champ3id'),\n",
-       " (0.006115361075350257, 't2_champ5id'),\n",
-       " (0.005964689602290331, 't1_ban4'),\n",
-       " (0.005805972502059701, 't2_ban4'),\n",
-       " (0.005503911897208657, 't1_ban3'),\n",
-       " (0.004067525554092875, 't1_champ4_sum1'),\n",
-       " (0.003971402538911211, 't2_champ1_sum1'),\n",
-       " (0.0038826904332390677, 't2_champ4_sum2'),\n",
-       " (0.0037373085779030635, 't1_champ2_sum1'),\n",
-       " (0.003582867177260621, 't1_champ1_sum2'),\n",
-       " (0.0034692557070879356, 't1_champ3_sum2'),\n",
-       " (0.003302343105147202, 't2_champ4_sum1'),\n",
-       " (0.0031547921596734372, 't1_champ1_sum1'),\n",
-       " (0.0031536531300990506, 't2_champ3_sum2'),\n",
-       " (0.003150631600321769, 't2_champ2_sum2'),\n",
-       " (0.003107068242198857, 't2_champ3_sum1'),\n",
-       " (0.003070396733723872, 't1_champ2_sum2'),\n",
-       " (0.0029970651526956436, 't2_champ1_sum2'),\n",
-       " (0.002970780451277667, 't1_champ4_sum2'),\n",
-       " (0.0029589765191964258, 't1_champ5_sum1'),\n",
-       " (0.0029095418810063016, 't2_champ2_sum1'),\n",
-       " (0.002877890358204512, 't1_champ3_sum1'),\n",
-       " (0.0028041103315362753, 't1_champ5_sum2'),\n",
-       " (0.00270744276974898, 't2_champ5_sum1'),\n",
-       " (0.0026828179143077243, 'firstdragon'),\n",
-       " (0.002448277065510542, 't2_champ5_sum2'),\n",
-       " (0.0022409762941682215, 'firsttower'),\n",
-       " (0.0019986549123158556, 't1_riftheraldkills'),\n",
-       " (0.0015778783392252423, 'firstriftherald'),\n",
-       " (0.0012037499373040174, 't2_riftheraldkills'),\n",
-       " (0.0011876259349233639, 'firstblood')]"
+       "[(0.1905588122668887, 'firstinhibitor'),\n",
+       " (0.09019510188566356, 'firstbaron'),\n",
+       " (0.04890630120590596, 'gameduration'),\n",
+       " (0.025585001490757396, 't1_champ5id'),\n",
+       " (0.024579797015844236, 't2_champ2id'),\n",
+       " (0.02441880809955123, 't1_champ1id'),\n",
+       " (0.0243427970126956, 't2_champ1id'),\n",
+       " (0.024135054215380678, 't2_champ3id'),\n",
+       " (0.02261110417360015, 't1_champ4id'),\n",
+       " (0.02257965059648864, 't1_ban3'),\n",
+       " (0.022342059762579643, 't1_champ3id'),\n",
+       " (0.02212494466390338, 't2_ban4'),\n",
+       " (0.022066030404134938, 't1_ban4'),\n",
+       " (0.02185432117113579, 't2_champ5id'),\n",
+       " (0.02169375184319295, 't2_ban5'),\n",
+       " (0.021525634307597578, 't1_champ2id'),\n",
+       " (0.021395992118583, 't2_ban3'),\n",
+       " (0.021285214597941686, 't2_champ4id'),\n",
+       " (0.021172648590634346, 't1_ban5'),\n",
+       " (0.02097472109588369, 't1_ban2'),\n",
+       " (0.020701420817614065, 't2_ban2'),\n",
+       " (0.02045023184291599, 't1_ban1'),\n",
+       " (0.02039123039319399, 't2_ban1'),\n",
+       " (0.011288827611872443, 't1_champ3_sum2'),\n",
+       " (0.01068023091514945, 't1_champ4_sum2'),\n",
+       " (0.010559166467486756, 't1_champ5_sum2'),\n",
+       " (0.010484926754338585, 't1_champ3_sum1'),\n",
+       " (0.010438739015006464, 't2_champ4_sum2'),\n",
+       " (0.010420902183388068, 't1_champ5_sum1'),\n",
+       " (0.010355726939648566, 't2_champ2_sum2'),\n",
+       " (0.010228642553794737, 't2_champ1_sum2'),\n",
+       " (0.010125555560443651, 't2_champ3_sum2'),\n",
+       " (0.010104316209545227, 't2_champ1_sum1'),\n",
+       " (0.010011452515069304, 't1_champ1_sum2'),\n",
+       " (0.00993248712009887, 't2_champ4_sum1'),\n",
+       " (0.009832656777857175, 't1_champ2_sum1'),\n",
+       " (0.009768434228299275, 't1_champ4_sum1'),\n",
+       " (0.009733513435047664, 't2_champ5_sum2'),\n",
+       " (0.009701423255177612, 't2_champ2_sum1'),\n",
+       " (0.009695811094750607, 't1_champ1_sum1'),\n",
+       " (0.009657013566540095, 't2_champ3_sum1'),\n",
+       " (0.00955322344190422, 't1_champ2_sum2'),\n",
+       " (0.009202758464964484, 't2_champ5_sum1'),\n",
+       " (0.007721737054181266, 'firstdragon'),\n",
+       " (0.00568932889625118, 'firstriftherald'),\n",
+       " (0.005199246983849148, 'firsttower'),\n",
+       " (0.0037232493832480267, 'firstblood')]"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 177,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5485,13 +5469,6 @@
     "importances = rf_model.feature_importances_\n",
     "sorted(zip(rf_model.feature_importances_, X.columns), reverse=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
