loop code to simplify checking against all early game attribute combos

--- a/monsters_dataframe.ipynb
+++ b/monsters_dataframe.ipynb
@@ -274,7 +274,8 @@
    "outputs": [],
    "source": [
     "#drop all columns that are used to identify the games and have no correlation to the game winner\n",
-    "df = df.drop(['seasonId','gameId','creationTime'],axis=1)"
+    "df = df.drop(['seasonId','gameId','creationTime'],axis=1)\n",
+    "df['winner']"
    ]
   },
   {
@@ -2526,13 +2527,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
     "#check the importance of early game factors \n",
     "df_earlygame = df[[ 'winner', 'firstblood', 'firsttower', 'firstinhibitor',\n",
-    "       'firstbaron', 'firstdragon']]"
+    "       'firstbaron', 'firstriftherald','firstdragon']]"
    ]
   },
   {
@@ -2873,222 +2874,562 @@
    "outputs": [],
    "source": [
     "#interactive dashboard for final project.\n",
-    "#how does combinations of the various factors affect game winner"
+    "#how does combinations of the various factors affect game winner\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def two_combo_winrate(df,team,feat1,feat2,feat3,feat4,feat5,target):\n",
-    "    counter = 0\n",
+    "def two_combo_winrate(df,team,feat1,feat2,feat3,feat4,feat5,feat6,target):\n",
+    "    counter_win = 0\n",
+    "    counter_lose = 0\n",
     "    for index,row in df.iterrows():\n",
     "        if row[feat1] == team and row[feat2] == team and row[feat3] != team and row[feat4] != team\\\n",
-    "        and row[feat5] != team and row[target] == team:\n",
-    "            counter += 1\n",
-    "    return counter/len(df[df[target] == team])"
+    "        and row[feat5] != team and row[feat6] != team and row[target] == team:\n",
+    "            counter_win += 1\n",
+    "        elif row[feat1] == team and row[feat2] == team and row[feat3] != team and row[feat4] != team\\\n",
+    "        and row[feat5] != team and row[feat6] != team and row[target] != team:\n",
+    "            counter_lose += 1\n",
+    "    print(feat1 + '/' + feat2)\n",
+    "    print(counter_win/(counter_win+counter_lose))\n",
+    "\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 256,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import combinations\n",
+    "def check_all_combos(df):\n",
+    "    combos = ['firstbaron','firstdragon','firstinhibitor','firstblood','firsttower','firstriftherald']\n",
+    "    comb = combinations(['firstbaron','firstdragon','firstinhibitor','firstblood','firsttower','firstriftherald'], 2)\n",
+    "    for i in list(comb):\n",
+    "        not_comb = [x for x in combos if x not in list(i)]\n",
+    "        first = not_comb[0]\n",
+    "        second = not_comb[1]\n",
+    "        third = not_comb[2]\n",
+    "        fourth = not_comb[3]\n",
+    "        j,k = i\n",
+    "        two_combo_winrate(df_earlygame,1,j,k,first,second,third,fourth,'winner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "firstbaron/firstdragon\n",
+      "0.40458015267175573\n",
+      "firstbaron/firstinhibitor\n",
+      "0.8993506493506493\n",
+      "firstbaron/firstblood\n",
+      "0.3710691823899371\n",
+      "firstbaron/firsttower\n",
+      "0.29411764705882354\n",
+      "firstbaron/firstriftherald\n",
+      "0.38666666666666666\n",
+      "firstdragon/firstinhibitor\n",
+      "0.5851063829787234\n",
+      "firstdragon/firstblood\n",
+      "0.07761194029850746\n",
+      "firstdragon/firsttower\n",
+      "0.06134969325153374\n",
+      "firstdragon/firstriftherald\n",
+      "0.11\n",
+      "firstinhibitor/firstblood\n",
+      "0.6810344827586207\n",
+      "firstinhibitor/firsttower\n",
+      "0.5411764705882353\n",
+      "firstinhibitor/firstriftherald\n",
+      "0.5294117647058824\n",
+      "firstblood/firsttower\n",
+      "0.06810035842293907\n",
+      "firstblood/firstriftherald\n",
+      "0.06859205776173286\n",
+      "firsttower/firstriftherald\n",
+      "0.09363295880149813\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_all_combos(df_earlygame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "firstinhibitor\n",
+      "firstbaron\n",
+      "firstinhibitor\n",
+      "firsttower\n",
+      "firstinhibitor\n",
+      "firstdragon\n",
+      "firstinhibitor\n",
+      "firstblood\n",
+      "firstinhibitor\n",
+      "firstriftherald\n",
+      "firstbaron\n",
+      "firsttower\n",
+      "firstbaron\n",
+      "firstdragon\n",
+      "firstbaron\n",
+      "firstblood\n",
+      "firstbaron\n",
+      "firstriftherald\n",
+      "firsttower\n",
+      "firstdragon\n",
+      "firsttower\n",
+      "firstblood\n",
+      "firsttower\n",
+      "firstriftherald\n",
+      "firstdragon\n",
+      "firstblood\n",
+      "firstdragon\n",
+      "firstriftherald\n",
+      "firstblood\n",
+      "firstriftherald\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A Python program to print all  \n",
+    "# combinations of given length \n",
+    "from itertools import combinations \n",
+    "  \n",
+    "# Get all combinations of [1, 2, 3] \n",
+    "# and length 2 \n",
+    "comb = combinations(['firstinhibitor','firstbaron','firsttower','firstdragon','firstblood','firstriftherald'],2) \n",
+    "combos = ['firstinhibitor','firstbaron','firsttower','firstdragon','firstblood','firstriftherald']\n",
+    "# Print the obtained combinations \n",
+    "for i in list(comb): \n",
+    "    j,k = i\n",
+    "    not_list = [x for x in combos if x not in i]\n",
+    "    j = feat1\n",
+    "    k = feat2 \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "277\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.05555555555555555"
+       "0.8993506493506493"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "two_combo_winrate(df_earlygame,1,'firstinhibitor','firstbaron','firsttower','firstdragon','firstblood','winner')"
+    "two_combo_winrate(df_earlygame,1,'firstinhibitor','firstbaron','firsttower','firstdragon','firstblood','firstriftherald','winner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.014232209737827715"
+       "0.5411764705882353"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 182,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "two_combo_winrate(df_earlygame,1,'firstinhibitor','firsttower','firstbaron','firstdragon','firstblood','winner')"
+    "two_combo_winrate(df_earlygame,1,'firstinhibitor','firsttower','firstbaron','firstdragon','firstblood','firstriftherald','winner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.012983770287141073"
+       "0.5851063829787234"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "two_combo_winrate(df_earlygame,1,'firstinhibitor','firstdragon','firsttower','firstbaron','firstblood','winner')"
+    "two_combo_winrate(df_earlygame,1,'firstinhibitor','firstdragon','firsttower','firstbaron','firstblood','firstriftherald','winner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "79\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.0"
+       "0.6810344827586207"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 184,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "two_combo_winrate(df_earlygame,1,'firstinhibitor','firstblood','firsttower','firstdragon','firstblood','winner')"
+    "two_combo_winrate(df_earlygame,1,'firstinhibitor','firstblood','firsttower','firstdragon','firstbaron','firstriftherald','winner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.004119850187265918"
+       "0.29411764705882354"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "two_combo_winrate(df_earlygame,1,'firstbaron','firsttower','firstinhibitor','firstdragon','firstblood','winner')"
+    "two_combo_winrate(df_earlygame,1,'firstbaron','firsttower','firstinhibitor','firstdragon','firstblood','firstriftherald','winner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 186,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "53\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.009113607990012484"
+       "0.40458015267175573"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 186,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "two_combo_winrate(df_earlygame,1,'firstbaron','firstdragon','firstinhibitor','firsttower','firstblood','winner')"
+    "two_combo_winrate(df_earlygame,1,'firstbaron','firstdragon','firstinhibitor','firsttower','firstblood','firstriftherald','winner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "59\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.009987515605493134"
+       "0.3710691823899371"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "two_combo_winrate(df_earlygame,1,'firstbaron','firstblood','firsttower','firstinhibitor','firstdragon','winner')"
+    "two_combo_winrate(df_earlygame,1,'firstbaron','firstblood','firsttower','firstinhibitor','firstdragon','firstriftherald','winner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.004119850187265918"
+       "0.06134969325153374"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "two_combo_winrate(df_earlygame,1,'firsttower','firstdragon','firstinhibitor','firstbaron','firstblood','winner')"
+    "two_combo_winrate(df_earlygame,1,'firsttower','firstdragon','firstinhibitor','firstbaron','firstblood','firstriftherald','winner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 189,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.005493133583021223"
+       "0.06810035842293907"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 189,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "two_combo_winrate(df_earlygame,1,'firsttower','firstblood','firstbaron','firstdragon','firstinhibitor','winner')"
+    "two_combo_winrate(df_earlygame,1,'firsttower','firstblood','firstbaron','firstdragon','firstinhibitor','firstriftherald','winner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 190,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.0"
+       "0.07761194029850746"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "two_combo_winrate(df_earlygame,1,'firstdragon','firstblood','firsttower','firstbaron','firstblood','winner')"
+    "two_combo_winrate(df_earlygame,1,'firstdragon','firstblood','firsttower','firstbaron','firstinhibitor','firstriftherald','winner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.11"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_combo_winrate(df_earlygame,1,'firstriftherald','firstdragon','firstblood','firsttower','firstbaron','firstinhibitor','winner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.06859205776173286"
+      ]
+     },
+     "execution_count": 192,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_combo_winrate(df_earlygame,1,'firstriftherald','firstblood','firstdragon','firsttower','firstbaron','firstinhibitor','winner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.09363295880149813"
+      ]
+     },
+     "execution_count": 193,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_combo_winrate(df_earlygame,1,'firstriftherald','firsttower','firstblood','firstdragon','firstbaron','firstinhibitor','winner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "29\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.38666666666666666"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_combo_winrate(df_earlygame,1,'firstriftherald','firstbaron','firstblood','firsttower','firstdragon','firstinhibitor','winner')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.5294117647058824"
+      ]
+     },
+     "execution_count": 195,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "two_combo_winrate(df_earlygame,1,'firstriftherald','firstinhibitor','firstblood','firsttower','firstbaron','firstdragon','winner')"
    ]
   },
   {
@@ -4847,7 +5188,7 @@
       "Model:                            OLS   Adj. R-squared (uncentered):              0.962\n",
       "Method:                 Least Squares   F-statistic:                              3545.\n",
       "Date:                Tue, 15 Dec 2020   Prob (F-statistic):                        0.00\n",
-      "Time:                        19:09:45   Log-Likelihood:                         -1576.5\n",
+      "Time:                        21:26:38   Log-Likelihood:                         -1576.5\n",
       "No. Observations:                6537   AIC:                                      3247.\n",
       "Df Residuals:                    6490   BIC:                                      3566.\n",
       "Df Model:                          47                                                  \n",
@@ -5212,7 +5553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5226,7 +5567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5237,7 +5578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5247,7 +5588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5259,7 +5600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 160,
    "metadata": {
     "scrolled": true
    },
@@ -5270,7 +5611,7 @@
        "0.9745347698334965"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 160,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5282,7 +5623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -5337,7 +5678,7 @@
        " (0.0015230185460789645, 't1_champ1_sum1')]"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5350,7 +5691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5361,7 +5702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5371,7 +5712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5383,7 +5724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -5392,7 +5733,7 @@
        "0.7638412542871141"
       ]
      },
-     "execution_count": 176,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5404,7 +5745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [
     {
@@ -5459,7 +5800,7 @@
        " (0.0037232493832480267, 'firstblood')]"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
